--- a/backend/src/insert/form.html
+++ b/backend/src/insert/form.html
@@ -1,3 +1,4 @@
+<!-- Este formulario es para probar la subida de archivos -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -36,7 +37,7 @@
       const tipoMime = archivo.type;
       const tamano = archivo.size;
 
-      // Simulación de ruta pública (deberías reemplazar con la real de Firebase)
+        //simulacion de url de firebase (aun sin implementar) 
       const ruta_url = `https://storage.googleapis.com/tu-bucket/${archivo.name}`;
 
       const datos = {
