--- a/backend/test/adjuntarLic.html
+++ b/backend/test/adjuntarLic.html
@@ -1,4 +1,3 @@
-<!-- Este formulario es para probar la subida de archivos -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -25,15 +24,9 @@
   <input type="file" id="archivo" required><br><br>
 
   <label>ID Licencia Médica:</label>
-  <input type="text" id="id_licencia" required><br><br>
+  <input type="text" id="id_licencia" readonly><br><br>
 
   <h3>Datos de nueva licencia médica</h3>
-
-  <label>Folio:</label>
-  <input type="text" id="folio" value="prueba123" required><br><br>
-
-  <label>Fecha Emisión:</label>
-  <input type="date" id="fecha_emision" value="2023-01-01" required><br><br>
 
   <label>Fecha Inicio:</label>
   <input type="date" id="fecha_inicio" value="2023-01-02" required><br><br>
@@ -41,21 +34,8 @@
   <label>Fecha Fin:</label>
   <input type="date" id="fecha_fin" value="2023-01-10" required><br><br>
 
-  <label>Estado:</label>
-  <select id="estado" required>
-    <option value="pendiente">Pendiente</option>
-    <option value="aprobada">Aprobada</option>
-    <option value="rechazada">Rechazada</option>
-  </select><br><br>
-
   <label>Motivo Rechazo (opcional):</label>
   <textarea id="motivo_rechazo"></textarea><br><br>
-
-  <label>Fecha Creación:</label>
-  <input type="date" id="fecha_creacion" value="2023-01-01" required><br><br>
-
-  <label>ID Usuario:</label>
-  <input type="number" id="id_usuario" value="1" required><br><br>
 
   <button onclick="procesarArchivo()">Subir</button>
 
@@ -69,7 +49,7 @@
       const res = await fetch('http://localhost:3000/usuarios/login', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ correo, clave })
+        body: JSON.stringify({ correo, contrasena: clave })
       });
 
       const json = await res.json();
@@ -90,11 +70,10 @@
 
     async function procesarArchivo() {
       const archivoInput = document.getElementById('archivo');
-      const idLicencia = document.getElementById('id_licencia').value;
       const archivo = archivoInput.files[0];
 
-      if (!archivo || !idLicencia) {
-        alert('Selecciona un archivo y completa el ID de licencia');
+      if (!archivo) {
+        alert('Selecciona un archivo');
         return;
       }
 
@@ -104,40 +83,46 @@
         return;
       }
 
-      const hash = await calcularHashSHA256(archivo);
-      const tipoMime = archivo.type;
-      const tamano = archivo.size;
-      const ruta_url = `https://storage.googleapis.com/tu-bucket/${archivo.name}`;
-
-      const nuevaLicencia = {
-        folio: document.getElementById('folio').value,
-        fecha_emision: document.getElementById('fecha_emision').value,
+      // Paso 1: crear licencia médica
+      const licenciaPayload = {
         fecha_inicio: document.getElementById('fecha_inicio').value,
         fecha_fin: document.getElementById('fecha_fin').value,
-        estado: document.getElementById('estado').value,
-        motivo_rechazo: document.getElementById('motivo_rechazo').value || null,
-        fecha_creacion: document.getElementById('fecha_creacion').value,
-        id_usuario: parseInt(document.getElementById('id_usuario').value)
+        motivo: document.getElementById('motivo_rechazo').value || null
       };
 
-      await fetch('http://localhost:3000/api/licencias', {
+      const resLicencia = await fetch('http://localhost:3000/api/licencias', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json',
           'Authorization': `Bearer ${token}`
         },
-        body: JSON.stringify(nuevaLicencia)
+        body: JSON.stringify(licenciaPayload)
       });
+
+      const jsonLicencia = await resLicencia.json();
+      if (!jsonLicencia.licencia?.id_licencia) {
+        document.getElementById('resultado').textContent = JSON.stringify(jsonLicencia, null, 2);
+        return;
+      }
+
+      const idLicencia = jsonLicencia.licencia.id_licencia;
+      document.getElementById('id_licencia').value = idLicencia;
+
+      // Paso 2: registrar metadata del archivo
+      const hash = await calcularHashSHA256(archivo);
+      const tipoMime = archivo.type;
+      const tamano = archivo.size;
+      const ruta_url = `https://storage.googleapis.com/tu-bucket/${archivo.name}`;
 
       const datosArchivo = {
         ruta_url,
         tipo_mime: tipoMime,
         hash,
         tamano,
-        id_licencia: parseInt(idLicencia)
+        id_licencia: idLicencia
       };
 
-      const res = await fetch('http://localhost:3000/api/licencias', {
+      const resArchivo = await fetch('http://localhost:3000/api/archivos', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json',
@@ -146,18 +131,12 @@
         body: JSON.stringify(datosArchivo)
       });
 
-      const json = await res.json();
-      document.getElementById('resultado').textContent = JSON.stringify(json, null, 2);
+      const jsonArchivo = await resArchivo.json();
+      document.getElementById('resultado').textContent = JSON.stringify({
+        licencia: jsonLicencia.licencia,
+        archivo: jsonArchivo
+      }, null, 2);
     }
-
-    document.getElementById('archivo').addEventListener('change', function (e) {
-      const archivo = e.target.files[0];
-      if (!archivo) return;
-
-      const nombre = archivo.name;
-      const id = nombre.match(/LIC\d+/)?.[0]?.replace('LIC', '') || '';
-      document.getElementById('id_licencia').value = id;
-    });
   </script>
 </body>
 </html>
