--- a/backend/test/adjuntarLic.html
+++ b/backend/test/adjuntarLic.html
@@ -115,5 +115,57 @@
       }
     }
   </script>
+
+  <hr>
+
+  <label>Estado:</label>
+  <select id="filtroEstado">
+    <option value="">Todos</option>
+    <option value="aceptado">Aprobadas</option>
+    <option value="rechazado">Rechazadas</option>
+  </select><br><br>
+
+  <label>Desde:</label>
+  <input type="date" id="filtroDesde"><br><br>
+
+  <label>Hasta:</label>
+  <input type="date" id="filtroHasta"><br><br>
+
+  <h2>Consultar licencias resueltas</h2>
+  <button onclick="consultarLicenciasResueltas()">Ver licencias aprobadas y rechazadas</button>
+
+  <pre id="resueltasResultado"></pre>
+
+<script>
+  async function consultarLicenciasResueltas() {
+  const token = localStorage.getItem('jwt');
+  if (!token) {
+    alert('Token JWT no encontrado. Inicia sesión primero.');
+    return;
+  }
+
+  const estado = document.getElementById('filtroEstado').value;
+  const desde = document.getElementById('filtroDesde').value;
+  const hasta = document.getElementById('filtroHasta').value;
+
+  const params = new URLSearchParams();
+  if (estado) params.append('estado', estado);
+  if (desde) params.append('desde', desde);
+  if (hasta) params.append('hasta', hasta);
+
+  const res = await fetch(`http://localhost:3000/api/licencias/resueltas?${params.toString()}`, {
+    method: 'GET',
+    headers: {
+      'Authorization': `Bearer ${token}`
+    }
+  });
+
+  const json = await res.json();
+  document.getElementById('resueltasResultado').textContent = JSON.stringify(json, null, 2);
+  }
+
+</script>
+
+
 </body>
 </html>
