--- a/backend/test/adjuntarLic.html
+++ b/backend/test/adjuntarLic.html
@@ -132,7 +132,7 @@
   <input type="date" id="filtroHasta"><br><br>
 
   <h2>Consultar licencias resueltas</h2>
-  <button onclick="consultarLicenciasResueltas()">Ver licencias aprobadas y rechazadas</button>
+  <button onclick="consultarLicenciasResueltas()">Ver licencias</button>
 
   <pre id="resueltasResultado"></pre>
 
